Add ability to paste art from clipboard

--- a/creator/index.html
+++ b/creator/index.html
@@ -310,6 +310,7 @@
 											<span class='checkmark'></span>
 										</label>
 								</div>
+								<button class='input margin-bottom' onclick='pasteArt();'>Paste from clipboard</button>
 							</div>
 							<h5 class='margin-bottom padding input-description'>Or enter a card name</h5>
 							<input id='art-name' type='text' placeholder='Enter Card Name' class='input margin-bottom' onchange="fetchScryfallData(this.value, artFromScryfall, 'art');">
