Add Top and Bottom Masks
Adds Top and Bottom masks for all frames in the more options drop down.

--- a/creator/index.html
+++ b/creator/index.html
@@ -160,6 +160,8 @@
 									<div class='input-grid margin-bottom'>
 										<button id='addToLeftHalf' class='input' onclick='addFrame([{src:"/img/frames/maskLeftHalf.png", name:"Left Half"}])'>Add Frame to Card (Left Half)</button>
 										<button id='addToMiddleThird' class='input' onclick='addFrame([{src:"/img/frames/maskMiddleThird.png", name:"Middle Third"}])'>Add Frame to Card (Middle Third)</button>
+										<button id='addToTopHalf' class='input' onclick='addFrame([{src:"/img/frames/maskTopHalf.png", name:"Top Half"}])'>Add Frame to Card (Top Half)</button>
+										<button id='addToBottomHalf' class='input' onclick='addFrame([{src:"/img/frames/maskBottomHalf.png", name:"Bottom Half"}])'>Add Frame to Card (Bottom Half)</button>
 									</div>
 									<h5 class='padding input-description'>You can now double click frames and masks to add them to the card. You can do so while holding the shift, control, or alt keys to add to the right half, left half, or middle third, respectively.</h5>
 								</div>
