Add paste card text button

--- a/creator/index.html
+++ b/creator/index.html
@@ -667,6 +667,10 @@
 							</select>
 						</div>
 						<div class='readable-background margin-bottom padding'>
+							<h5 class='padding margin-bottom input-description'>Paste full text</h5>
+							<button class='input margin-bottom' onclick='pasteCardText();'>Paste card</button>
+						</div>
+						<div class='readable-background margin-bottom padding'>
 							<h5 class='padding margin-bottom input-description'>Save your current card</h5>
 							<button class='input margin-bottom' onclick='saveCard();'>Save Card</button>
 							<h5 class='padding margin-bottom input-description'>Load a saved card</h5>
