Add Borderless (Alt) (Universes Beyond) autoframe

--- a/creator/index.html
+++ b/creator/index.html
@@ -730,6 +730,7 @@
 							<option value="UB">Universes Beyond</option>
 							<option value="Etched">Etched</option>
 							<option value="Borderless">Borderless (Alt)</option>
+							<option value="BorderlessUB">Borderless (Alt) (Universes Beyond)</option>
 							<option value="Praetors">Phyrexian</option>
 							<option value="8th">8th Edition</option>
 							<option value="Seventh">Seventh Edition</option>
