Option to click and drag to move set symbol instead of art

--- a/creator/index.html
+++ b/creator/index.html
@@ -410,6 +410,13 @@
 							<h5 class='padding margin-bottom input-description'>Clears the Set Symbol, making it blank</h5>
 							<button class='input margin-bottom' onclick='uploadSetSymbol(blank.src);'>Remove Set Symbol</button>
 						</div>
+						<div class='readable-background padding margin-bottom'>
+							<h5 class='input-description margin-bottom'>Click and drag to move set symbol instead of art (hold shift to zoom)</h5>
+							<label class='checkbox-container input margin-bottom'>Click and drag to move set symbol instead of art
+								<input id='drag-target-setSymbol' type='checkbox'>
+								<span class='checkmark'></span>
+							</label>
+						</div>
 						<div class='readable-background padding'>
 							<h5 class='input-description margin-bottom'>Lock the set symbol code (saves between reloads)</h5>
 							<label class='checkbox-container input margin-bottom'>Lock set symbol code
