Add Bullet Point replacement code
Adds bullet point replacement code and updates the text code reference to add that and the Outline hints

--- a/creator/index.html
+++ b/creator/index.html
@@ -253,6 +253,9 @@
 									<h5>{right#}</h5><h5>Moves the text # pixels right</h5>
 									<h5>{shadow#}</h5><h5>Changes the shadow distance to # (use {shadow0} to remove the shadow)</h5>
 									<h5>{shadowcolor#}</h5><h5>Changes the shadow color to #</h5>
+									<h5>{outline#}</h5><h5>Changes the Outline Width to # (enables it if not already enabled)</h5>
+									<h5>{outlinecolor___}</h5><h5>Changes the Outline Color to ___ (ie '{outlinecolorblue}'</h5>
+									<h5>{bullet}</h5><h5>Does bullet point •</h5>
 									<h5>{indent}</h5><h5>Indents the rest of the paragraph to the current point</h5>
 									<h5>{/indent}</h5><h5>Removes paragraph indendation</h5>
 									<h5>{kerning#}</h5><h5>Changes the kerning (letter spacing) to #</h5>
