--- a/creator/index.html
+++ b/creator/index.html
@@ -511,6 +511,11 @@
 								<option value="/img/watermarks/faction-league-of-dastardly-doom.svg">League of Dastardly Doom</option>
 								<option value="/img/watermarks/faction-goblin-explosioneers.svg">Goblin Explosioneers</option>
 								<option value="/img/watermarks/faction-crossbreed-labs.svg">Crossbreed Labs</option>
+								<option disabled>Avatar The Last Airbender (TLA)</option>
+								<option value="/img/watermarks/atla-water.svg">Water Nation</option>
+								<option value="/img/watermarks/atla-earth.svg">Earth Nation</option>
+								<option value="/img/watermarks/atla-fire.svg">Fire Nation</option>
+								<option value="/img/watermarks/atla-air.svg">Air Nation</option>
 								<option disabled>Custome</option>
 								<option value="/img/watermarks/purple.svg">Purple Mana</option>
 							</select>
