--- a/converter/index.html
+++ b/converter/index.html
@@ -8,7 +8,7 @@
             <h5 class='margin-bottom padding input-description'>Upload the image that you'd like to convert</h5>
             <div class='padding drop-area'>
                 <h5 class='margin-bottom padding input-description'>Drag and drop</h5>
-                <input type='file' multiple accept='.png, .svg, .jpg, .jpeg, .bmp' placeholder='File Upload' class='input' oninput='uploadFiles(event.target.files, prepareImage, "filename");' data-dropFunction='prepareImage' data-otherParams='filename'>
+                <input type='file' multiple accept='.png, .svg, .jpg, .jpeg, .bmp, .webp' placeholder='File Upload' class='input' oninput='uploadFiles(event.target.files, prepareImage, "filename");' data-dropFunction='prepareImage' data-otherParams='filename'>
             </div>
         </div>
     </div>
