--- a/print/index.html
+++ b/print/index.html
@@ -46,7 +46,7 @@
         <div class="drop-area" style="padding: 1rem">
             <div class='padding margin-bottom-large readable-background'>
                 <h5 class='margin-bottom padding input-description'>Upload the images that you'd like to print, or drag-and-drop them</h5>
-                <input type='file' multiple accept='.png, .svg, .jpg, .jpeg, .bmp' placeholder='File Upload' class='input' oninput='uploadFiles(event.target.files, uploadCard, "filename");' data-dropFunction='uploadCard' data-otherParams='filename'>
+                <input type='file' multiple accept='.png, .svg, .jpg, .jpeg, .bmp, .webp' placeholder='File Upload' class='input' oninput='uploadFiles(event.target.files, uploadCard, "filename");' data-dropFunction='uploadCard' data-otherParams='filename'>
             </div>
             <div class="center">
                 <canvas style='height: auto; max-width:850px; width: 100%; background: #fff;'></canvas>
