Add Eighth Edition UB frame

--- a/creator/index.html
+++ b/creator/index.html
@@ -747,7 +747,7 @@
 							<option value="Borderless">Borderless (Alt)</option>
 							<option value="BorderlessUB">Borderless (Alt) (Universes Beyond)</option>
 							<option value="Praetors">Phyrexian</option>
-							<option value="8th">8th Edition</option>
+							<option value="8th">Eighth Edition</option>
 							<option value="Seventh">Seventh Edition</option>
 
 							<option disabled>Redone frames</option>
